# LLM-COST-AUTOPILOT

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app_fy.py  app_hf.py  docker-compose.yml  entrypoint.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/db/: database.py  models.py
app/schemas/: router_schema.py
app/services/: classifier_service.py  evaluator_service.py  provider_service.py
config/: routing_config.yaml
dashboard/: app.py
tests/: test_api.py  test_classifier.py  test_evaluator.py  test_provider.py
